--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -6,31 +6,56 @@
   width: 300px;
   height: 100vh;
   background-color: #253141;
-  padding: 0 20px;
 }
 .nav_bar {
   height: 100px;
+  padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.user_name a {
+  color: #fafafa;
+  font-size: 16px;
+  text-decoration: none;
+}
+.create_room a {
+  font-size: 10px;
+  color: deepskyblue;
+  padding: 14px;
+  border: 1px solid lightblue;
+  text-decoration: none;
 }
 .rooms {
   height: calc(100vh - 100px);
   background-color: #2f3e51;
+  padding: 0 20px;
+  overflow: scroll;
+}
+.room {
+  margin: 20px 0 40px;
+}
+.visit_room a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .chat {
   width: calc(100vw - 300px);
   background-color: #fff;
-  padding: 0 40px;
 }
 .chat_header {
   height: 100px;
-  margin-bottom: 46px;
+  padding: 0 40px;
 }
 .main_chat {
   height: calc(100vh - 100px - 90px);
   background-color: #fafafa;
+  padding: 46px 40px 0px ;
 }
 .chat_footer {
   height: 90px;
   background-color: #ddd;
-  padding: 20px 0;
+  padding: 20px 40px;
 }
