--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,21 @@
 <div class="nav_bar">
+  <div class="user_name">
+    <a href="#">Tom</a>
+  </div>
+  <div class="create_room">
+    <a href="#">チャットを作成する</a>
+  </div>
 </div>
 
 <div class="rooms">
+  <div class="room">
+    <div class="visit_room">
+      <a href="#">techroom1</a>
+    </div>
+  </div>
+  <div class="room">
+    <div class="visit_room">
+      <a href="#">techroom2</a>
+    </div>
+  </div>
 </div>
